--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,4 +28,10 @@
 #       enabled: "ON"
 
 en:
-  hello: "Hello world"
+  time:
+    formats:
+      default: "%m/%d/%Y %I:%M %p" # Formato americano completo
+      time_only: "%I:%M %p"        # Apenas a hora
+  date:
+    formats:
+      default: "%m/%d/%Y"
